@@ -120,7 +120,7 @@ else
   }
   Function {send_data(int insert, int control, float value, bool isInteger = true)} {} {
     code {//
-synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, 2, insert);} {}
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, 1, insert);} {}
   }
   Function {init(SUBnoteParameters *pars_, int n_, int npart_, int kititem_)} {} {
     code {pars=pars_;
@@ -186,7 +186,7 @@ if ((Fl::event_button() == 3))
         xywh {625 446 105 20} box THIN_UP_BOX labelfont 1 labelsize 11
       }
       Fl_Group {} {
-        label AMPLITUDE
+        label AMPLITUDE open
         xywh {5 5 215 135} box THIN_UP_FRAME labelfont 1 labelsize 12 align 17
       } {
         Fl_Dial vol {
@@ -239,7 +239,7 @@ send_data (1, o->value());}
         Fl_Group ampenv {
           label {SUBsynth - Amplitude Envelope}
           xywh {10 65 205 70} box FLAT_BOX color 51 align 144
-          code0 {o->init(pars->AmpEnvelope, npart, kititem, 2, 0);}
+          code0 {o->init(pars->AmpEnvelope, npart, kititem, 1, 0);}
           class EnvelopeUI
         } {}
       }
@@ -309,7 +309,7 @@ send_data (82, o->value());}
         Fl_Group freqenvelopegroup {
           label {SUBsynth - Frequency Envelope}
           xywh {445 65 205 70} box FLAT_BOX color 51 align 144
-          code0 {o->init(pars->FreqEnvelope, npart, kititem, 2, 1);}
+          code0 {o->init(pars->FreqEnvelope, npart, kititem, 1, 1);}
           code1 {if (pars->PFreqEnvelopeEnabled == 0) o->deactivate();}
           class EnvelopeUI
         } {}
@@ -433,7 +433,7 @@ send_data (112, o->value());}
         Fl_Group bandwidthenvelopegroup {
           label {SUBsynth - BandWidth Envelope}
           xywh {225 65 205 70} box FLAT_BOX color 51 align 144
-          code0 {o->init(pars->BandWidthEnvelope, npart, kititem, 2, 3);}
+          code0 {o->init(pars->BandWidthEnvelope, npart, kititem, 1, 3);}
           code1 {if (pars->PBandWidthEnvelopeEnabled==0) o->deactivate();}
           class EnvelopeUI
         } {}
@@ -474,13 +474,13 @@ send_data (17, o->value() + 64);}
         Fl_Group filterenv {
           label {SUBsynth - Filter Envelope}
           xywh {445 331 275 70} box FLAT_BOX color 51 align 144
-          code0 {o->init(pars->GlobalFilterEnvelope, npart, kititem, 2, 2);}
+          code0 {o->init(pars->GlobalFilterEnvelope, npart, kititem, 1, 2);}
           class EnvelopeUI
         } {}
         Fl_Group filterui {
           label {SUBsynthl - Filter}
           xywh {445 246 275 75} box FLAT_BOX color 50 align 144
-          code0 {o->init(pars->GlobalFilter,&pars->PGlobalFilterVelocityScale,&pars->PGlobalFilterVelocityScaleFunction, npart, kititem, 2);}
+          code0 {o->init(pars->GlobalFilter,&pars->PGlobalFilterVelocityScale,&pars->PGlobalFilterVelocityScaleFunction, npart, kititem, 1);}
           class FilterUI
         } {}
       }
@@ -648,7 +648,7 @@ send_data (50, o->value());}
   }
   Function {send_data(int control, float value, bool isInteger = true)} {} {
     code {//
-synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, 2);} {}
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, 1);} {}
   }
   Function {SUBnoteUI(SUBnoteParameters *parameters, int npart_, int kititem_)} {} {
     code {pars = parameters;
