@@ -3,6 +3,8 @@ yoshimi 1.3.x
 2016-5-20 Will
 - Rearanged some control values.
 - Corrected amp/freq lfo anomaly.
+- Changed engine numbers.
+- Updated docs.
 
 2016-5-19 Will
 - Completed moving controls ID text from GUI to main code.
